--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -155,7 +155,12 @@
                     <img th:each="carta : ${cartasTiradasJ2}" th:src="@{${carta.img}}" alt="Carta" class="cartaTirada"/>
                 </div>
             </div>
-            <div class="col-4"></div>
+            <div class="col-4 d-flex flex-column justify-content-center align-items-center">
+                <p th:if="${jugador1 != null}"
+                   th:text="|${jugador1.nombre}: ${puntosJ1 != null ? puntosJ1 : 0}|"></p>
+                <p th:if="${jugador2 != null}"
+                   th:text="|${jugador2.nombre}: ${puntosJ2 != null ? puntosJ2 : 0}|"></p>
+            </div>
         </div>
 
         <!-- CARTAS JUGADOR RIVAL -->
@@ -301,6 +306,11 @@
     <h3 th:if="${jugador1 != null}" th:text="${'Puntos de ' + jugador1.nombre + ': ' + puntosJ1}"></h3>
     <h3 th:if="${jugador2 != null}" th:text="${'Puntos de ' + jugador2.nombre + ': ' + puntosJ2}"></h3>
     <h3 th:if="${puntosEnJuego != null}" th:text="${'Puntos en juego: ' + puntosEnJuego}"></h3>
+    <h3 th:if="${terminada != null}" th:text="${terminada ? 'Listo, se terminó' : 'Continuar jugando.'}"></h3>
+<!--    <div class="d-flex flex-column gap-2" th:if="${terminada != null}">-->
+<!--        <p th:text="${'Ganador: ' + ganadorDeMano.nombre}"></p>-->
+<!--        <p th:text="${'Puntos: ' + puntosGanadorMano}"></p>-->
+<!--    </div>-->
     <div class="tabla-datos">
         <!-- Verifica si la lista de rondas no es null ni está vacía -->
         <div th:if="${rondas != null and !rondas.isEmpty()}">
@@ -316,7 +326,7 @@
                 <tbody>
                 <tr th:each="ronda : ${rondas}">
                     <td th:text="${ronda.nroRonda}"></td>
-                    <td th:text="${ronda.jugador}"></td>
+                    <td th:text="${ronda.jugador.nombre}"></td>
                     <td th:text="${ronda.valorCarta}"></td>
                     <!-- Concatenación con Thymeleaf usando |...| -->
                     <td th:text="|${ronda.nroCarta} ${ronda.palo}|"></td>
@@ -329,24 +339,6 @@
             <p>No hay rondas jugadas aún.</p>
         </div>
     </div>
-    <div class="tabla-datos">
-        <!-- Verifica si la lista de rondas no es null ni está vacía -->
-        <div th:if="${manos != null and !manos.isEmpty()}">
-            <table class="table table-striped table-bordered">
-                <thead class="thead-dark">
-                <tr>
-                    <th>NOMBRE JUGADOR</th>
-                    <th>PUNTOS</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="mano : ${manos}">
-                    <td th:text="${mano.jugador.nombre}"></td>
-                    <td th:text="${mano.puntos}"></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
         <!-- Mensaje cuando la lista está vacía o es null -->
         <div th:if="${manos == null or manos.isEmpty()}">
             <p>No hay ganador de mano aún</p>
