--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -117,25 +117,25 @@
                     <a class="btn btn-primary"
                        th:href="@{'/respuesta?accion=' + accion.getNro()
                                   + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getId()
+                                  + '&ronda= ' + ronda.getNro()
                                   + '&respuesta=1&jugador=1'}">Quiero
                     </a>
                     <a class="btn btn-primary"
                        th:href="@{'/respuesta?accion=' + accion.getNro()
                                   + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getId()
+                                  + '&ronda= ' + ronda.getNro()
                                   + '&respuesta=0&jugador=1'}">No Quiero
                     </a>
                     <a class="btn btn-primary"
                        th:href="@{'/respuesta?accion=' + accion.getNro()
                                   + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getId()
+                                  + '&ronda= ' + ronda.getNro()
                                   + '&respuesta=6&jugador=1'}">Re Truco
                     </a>
                     <a class="btn btn-primary"
                        th:href="@{'/respuesta?accion=' + accion.getNro()
                                   + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getId()
+                                  + '&ronda= ' + ronda.getNro()
                                   + '&respuesta=7&jugador=1'}">Vale Cuatro
                     </a>
                     <!-- FIN NUEVA LÓGICA -->
