--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -52,19 +52,19 @@
                             Nro Jugador (1 o 2)
                     -->
                     <a class="btn btn-primary"
-                       th:href="@{'/envido?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
+                       th:href="@{'/accion?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
                                   + '&accion=5&jugador=1'}">Envido
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{'/envido?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
+                       th:href="@{'/accion?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
                                   + '&accion=2&jugador=1'}">Truco
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{'/envido?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
+                       th:href="@{'/accion?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
                                   + '&accion=8&jugador=1'}">FLOR
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{'/envido?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
+                       th:href="@{'/accion?mano=' + mano.getId() + '&ronda= ' + ronda.getId()
                                   + '&accion=9&jugador=1'}">MAZO
                     </a>
                     <!-- FIN NUEVA LÓGICA -->
