--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -57,7 +57,7 @@
         </table>
     </div>
     <!--  TABLA RECOMENDADOS  -->
-    <div class="d-flex flex-column align-items-center tablaAmigos" th:if="${amigosSugeridos.size() != 0}">
+    <div class="d-flex flex-column align-items-center tablaAmigos" th:if="${#lists.isEmpty(amigosSugeridos) == false}">
         <p class="text-white fs-5" th:if="${error != null}">No tienes amigos, te recomendamos estos.</p>
         <p class="text-white fs-5" th:unless="${error != null}">Recomendados</p>
         <table class="table table-striped table-bordered bg-white" style="height: fit-content;">
