--- a/src/main/webapp/resources/core/css/home.css
+++ b/src/main/webapp/resources/core/css/home.css
@@ -128,3 +128,20 @@ a {
 	background: #1568b1;
 	border: 1px solid #fff;
 }
+
+.sugerencias-container {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	justify-content: center;
+}
+
+.sugerencia-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 10px;
+	color: white;
+	text-align: center;
+}
